[package]
authors = ["887 <2300887@gmail.com>"]
name = "filer"
build = "build.rs"
version = "0.1.0"

[features]
experiments = []

[dependencies]
gdk = "0.7.0"
gio = "0.3.0"
gdk-pixbuf = "0.3.0"
gettext-rs = "0.3.0"

# [dependencigs]
# webkit2gtk = "0.2.2"

[dependencies.gtk]
features = [
    "v3_22",
    "embed-lgpl-docs",
]
version = "0.3.x"

[dependencies.glib]
version = "0.4.0"
