[package]
authors = ["887 <2300887@gmail.com>"]
build = "build.rs"
name = "filer"
version = "0.1.0"
[dependencies]
dirs = "1.0.2"
gdk = "0.8.0"
gdk-pixbuf = "0.4.0"
gettext-rs = "0.3.0"
gio = "0.4.0"
glib = "0.5.0"

[dependencies.gtk]
features = ["v3_22", "embed-lgpl-docs"]
version = "0.4.1"

[features]
experiments = []
